--- a/BookOnShelfBlazor/Components/Account/Pages/Register.razor
+++ b/BookOnShelfBlazor/Components/Account/Pages/Register.razor
@@ -18,10 +18,10 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ApplicationDbContext Context
 
+
 <PageTitle>Register</PageTitle>
-
-<h1>Register</h1>
-
+<div class="align-content-center"
+    <h1 class="text-center">Register</h1>
 <div class="row">
     <div class="col-md-4">
         <StatusMessage Message="@Message" />
@@ -98,13 +98,7 @@
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </EditForm>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            <ExternalLoginPicker />
-        </section>
-    </div>
+</div>
 </div>
 
 @code {
