--- a/BookOnShelfBlazor/Components/Account/Pages/Register.razor
+++ b/BookOnShelfBlazor/Components/Account/Pages/Register.razor
@@ -20,85 +20,91 @@
 
 
 <PageTitle>Register</PageTitle>
-<div class="align-content-center"
-    <h1 class="text-center">Register</h1>
-<div class="row">
-    <div class="col-md-4">
-        <StatusMessage Message="@Message" />
-        <EditForm Model="Input" asp-route-returnUrl="@ReturnUrl" method="post" OnValidSubmit="RegisterUser" FormName="register">
-            <DataAnnotationsValidator />
-            <h2>Create a new account.</h2>
-            <hr />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="email">Email</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-9">
+            <h1 class="text-center">Register</h1>
+            <br />
+            <div class="row">
+                <div class="col-md-12">
+                    <StatusMessage Message="@Message" />
+                    <EditForm Model="Input" asp-route-returnUrl="@ReturnUrl" method="post" OnValidSubmit="RegisterUser" FormName="register">
+                        <DataAnnotationsValidator />
+                        <h2>Create a new account.</h2>
+                        <hr />
+                        <ValidationSummary class="text-danger" role="alert" />
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.Email" class="form-control custom-outline-color" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <label for="email">Email</label>
+                            <ValidationMessage For="() => Input.Email" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText type="password" @bind-Value="Input.Password" class="form-control custom-outline-color" autocomplete="new-password" aria-required="true" placeholder="password" />
+                            <label for="password">Password</label>
+                            <ValidationMessage For="() => Input.Password" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control custom-outline-color" autocomplete="new-password" aria-required="true" placeholder="password" />
+                            <label for="confirm-password">Confirm Password</label>
+                            <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.FirstName" class="form-control custom-outline-color" autocomplete="given-name" aria-required="true" placeholder="John" />
+                            <label for="first-name">First Name</label>
+                            <ValidationMessage For="() => Input.FirstName" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.MiddleName" class="form-control custom-outline-color" autocomplete="additional-name" placeholder="Middle Name" />
+                            <label for="middle-name">Middle Name</label>
+                            <ValidationMessage For="() => Input.MiddleName" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.LastName" class="form-control custom-outline-color" autocomplete="family-name" aria-required="true" placeholder="Doe" />
+                            <label for="last-name">Last Name</label>
+                            <ValidationMessage For="() => Input.LastName" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputNumber @bind-Value="Input.PhoneNumber" class="form-control custom-outline-color" autocomplete="tel" aria-required="true" placeholder="0612345678" />
+                            <label for="phone-number">Phone Number</label>
+                            <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputDate @bind-Value="Input.DateOfBirth" class="form-control custom-outline-color" aria-required="true" />
+                            <label for="date-of-birth">Date of Birth</label>
+                            <ValidationMessage For="() => Input.DateOfBirth" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.City" class="form-control custom-outline-color" autocomplete="address-level2" aria-required="true" placeholder="Amsterdam" />
+                            <label for="city">City</label>
+                            <ValidationMessage For="() => Input.City" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.Street" class="form-control custom-outline-color" autocomplete="address-line1" aria-required="true" placeholder="Main Street" />
+                            <label for="street">Street</label>
+                            <ValidationMessage For="() => Input.Street" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputNumber @bind-Value="Input.HouseNumber" class="form-control custom-outline-color" autocomplete="address-line2" aria-required="true" placeholder="123" />
+                            <label for="house-number">House Number</label>
+                            <ValidationMessage For="() => Input.HouseNumber" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.HouseNumberAddition" class="form-control custom-outline-color" autocomplete="address-line2" placeholder="A" />
+                            <label for="house-number-addition">House Number Addition</label>
+                            <ValidationMessage For="() => Input.HouseNumberAddition" class="text-danger" />
+                        </div>
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="Input.PostalCode" class="form-control custom-outline-color" autocomplete="postal-code" aria-required="true" placeholder="1234AB" />
+                            <label for="postal-code">Postal Code</label>
+                            <ValidationMessage For="() => Input.PostalCode" class="text-danger" />
+                        </div>
+                        <hr />
+                        <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+                    </EditForm>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label for="password">Password</label>
-                <ValidationMessage For="() => Input.Password" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label for="confirm-password">Confirm Password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.FirstName" class="form-control" autocomplete="given-name" aria-required="true" placeholder="John" />
-                <label for="first-name">First Name</label>
-                <ValidationMessage For="() => Input.FirstName" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.MiddleName" class="form-control" autocomplete="additional-name" placeholder="Middle Name" />
-                <label for="middle-name">Middle Name</label>
-                <ValidationMessage For="() => Input.MiddleName" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.LastName" class="form-control" autocomplete="family-name" aria-required="true" placeholder="Doe" />
-                <label for="last-name">Last Name</label>
-                <ValidationMessage For="() => Input.LastName" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputNumber @bind-Value="Input.PhoneNumber" class="form-control" autocomplete="tel" aria-required="true" placeholder="0612345678" />
-                <label for="phone-number">Phone Number</label>
-                <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputDate @bind-Value="Input.DateOfBirth" class="form-control" aria-required="true" />
-                <label for="date-of-birth">Date of Birth</label>
-                <ValidationMessage For="() => Input.DateOfBirth" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.City" class="form-control" autocomplete="address-level2" aria-required="true" placeholder="Amsterdam" />
-                <label for="city">City</label>
-                <ValidationMessage For="() => Input.City" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Street" class="form-control" autocomplete="address-line1" aria-required="true" placeholder="Main Street" />
-                <label for="street">Street</label>
-                <ValidationMessage For="() => Input.Street" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputNumber @bind-Value="Input.HouseNumber" class="form-control" autocomplete="address-line2" aria-required="true" placeholder="123" />
-                <label for="house-number">House Number</label>
-                <ValidationMessage For="() => Input.HouseNumber" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.HouseNumberAddition" class="form-control" autocomplete="address-line2" placeholder="A" />
-                <label for="house-number-addition">House Number Addition</label>
-                <ValidationMessage For="() => Input.HouseNumberAddition" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.PostalCode" class="form-control" autocomplete="postal-code" aria-required="true" placeholder="1234AB" />
-                <label for="postal-code">Postal Code</label>
-                <ValidationMessage For="() => Input.PostalCode" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </EditForm>
+        </div>
     </div>
-</div>
 </div>
 
 @code {
@@ -133,7 +139,7 @@
 
 
         UserInfo? userInfo = await AddUserInfo();
-        if(userInfo !=null)
+        if (userInfo != null)
         {
             user.UserInfo = userInfo;
             await UserManager.UpdateAsync(user);
