--- a/BookOnShelfBlazor/Components/Layout/NavMenu.razor.css
+++ b/BookOnShelfBlazor/Components/Layout/NavMenu.razor.css
@@ -35,10 +35,32 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-decoration: none; 
+    text-decoration: none;
+    transition: 0.3s ease-in-out;
+}
+.nav-link:hover {
+    animation: jumpOut 0.5s ease forwards;
+}
+
+@keyframes jumpOut {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1.05);
+    }
 }
 .nav-item span {
     font-size: 16px;
+}
+.center-icon {
+    display: flex;
+    justify-content: center;
 }
 
 .custom-icon-size {
