--- a/BookOnShelfBlazor/wwwroot/app.css
+++ b/BookOnShelfBlazor/wwwroot/app.css
@@ -7,13 +7,18 @@ a, .btn-link {
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    color: white;
+    background-color: black;
+    border-color: black;
+    transition: transform 0.3s ease-in-out;
 }
 
+    .btn-primary:hover {
+        background-color: black;
+    }
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem ;
 }
 
 .content {
@@ -48,4 +53,12 @@ h1:focus {
 
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
+}
+
+.btn{
+    margin-bottom : 20px;
+}
+
+.custom-outline-color:focus {
+    border-color: black;
 }
