Made some css changes and started on BookDetails page + added a review system table in database

--- a/BookOnShelfBlazor/Components/Pages/AddBook.razor
+++ b/BookOnShelfBlazor/Components/Pages/AddBook.razor
@@ -55,7 +55,7 @@
                                 <label for="Description" class="form-label">Description</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <InputText @bind-Value="Book.ISBN" class="form-control custom-outline-color" placeholder="Author" maxlenth="13" />
+                                <InputText @bind-Value="Book.ISBN" class="form-control custom-outline-color" placeholder="Author" maxlentgh="13" />
                                 <label for="ISBN" class="form-label">ISBN</label>
                             </div>
                             <div class="form-floating mb-3">
