--- a/BookOnShelfBlazor/Components/Pages/Library.razor
+++ b/BookOnShelfBlazor/Components/Pages/Library.razor
@@ -11,31 +11,47 @@
 @inject NavigationManager NavigationManager
 @rendermode InteractiveServer
 
+
+<h3 class="text-center">Library</h3>
+<hr />
 <div class="container">
     <div class="row">
         @foreach (var book in Books)
         {
-            <div class="card mb-3">
-                <div class="card-body" style="display: flex; padding: 1rem 0.5rem">
-                    <div class="image-container" style="height: 225px; padding: 4px; border: 1px solid #ccc;">
-                        @if (book.FrontCover != null && book.FrontCover.Length > 0)
-                        {
-                            <img src="@(GetImageSource(book.FrontCover))" class="card-img" alt="Book Image" style="max-width: 100%; max-height: 100%; height: 100%;">
-                        }
-                        else
-                        {
-                            <span>No Image Available</span>
-                        }
+            int BookId = book.BookId;
+            <a class="link-color" href="@($"/BookDetails/{BookId}")">
+            <div class="card mb-3" style="margin-bottom: 50px; position: relative;">
+                    <div class="card-body" style="display: flex; padding: 1rem 0.5rem; position: relative;">
+                        <div class="image-container" style="height: 225px; padding: 4px; border: 1px solid #ccc;">
+                            @if (book.FrontCover != null && book.FrontCover.Length > 0)
+                            {
+                                <img src="@(GetImageSource(book.FrontCover))" class="card-img" alt="Book Image" style="max-width: 100%; max-height: 100%; height: 100%;">
+                            }
+                            else
+                            {
+                                <span>No Image Available</span>
+                            }
+                        </div>
+                        <div class="vr" style="margin-left: 25px; margin-right: 25px;"></div>
+                        <div style="flex-grow: 1; text-align: center;">
+                            <p>@book.Title</p>
+                            <hr style="margin-top: auto; margin-bottom: 10px;">
+                            <p>@book.Description</p>
+                        </div>
+                        <div class="vr" style="margin-left: 25px; margin-right:25px;"></div>
                     </div>
-                    <div class="vr" style="margin-left:25px;"></div>
-                </div>  
-            </div>
+                </div>
+            </a>
         }
     </div>
 </div>
+
+
 @code {
 
     private List<Books> Books = new List<Books>();
+
+    private string Message = "";
 
     protected async override Task OnInitializedAsync()
     {
@@ -52,5 +68,4 @@
 
         return $"data:image/jpeg;base64,{Convert.ToBase64String(imageData)}";
     }
-
 }
