--- a/BookOnShelfBlazor/wwwroot/app.css
+++ b/BookOnShelfBlazor/wwwroot/app.css
@@ -66,3 +66,25 @@ h1:focus {
 .card-body {
     padding: 1rem 0.5rem;
 }
+
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    margin: 10px;
+    padding: 10px;
+}
+
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .link-color{
+        color: black;
+        text-decoration:none;
+    }
+
+    .link-color:hover{
+        color:black;
+    }
